--- a/package.json
+++ b/package.json
@@ -9,12 +9,20 @@
     "web": "expo start --web",
     "eject": "expo eject"
   },
+  "rnpm": {
+    "assets": [
+      "./assets/fonts"
+    ]
+  },
   "dependencies": {
+    "@expo-google-fonts/montserrat": "^0.2.2",
     "@expo/vector-icons": "^12.0.5",
     "@react-navigation/drawer": "^6.1.8",
     "@react-navigation/native": "^6.0.6",
     "@react-navigation/stack": "^6.0.11",
     "expo": "~44.0.0",
+    "expo-app-loading": "~1.3.0",
+    "expo-font": "^10.0.4",
     "expo-linear-gradient": "~11.0.0",
     "expo-status-bar": "~1.2.0",
     "node-sass": "^7.0.1",
@@ -22,6 +30,7 @@
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
     "react-native-gesture-handler": "~2.1.0",
+    "react-native-paper": "^4.11.2",
     "react-native-reanimated": "~2.3.1",
     "react-native-safe-area-context": "^3.3.2",
     "react-native-sass-transformer": "^2.0.0",
