--- a/package.json
+++ b/package.json
@@ -20,9 +20,11 @@
     "@react-navigation/drawer": "^6.1.8",
     "@react-navigation/native": "^6.0.6",
     "@react-navigation/stack": "^6.0.11",
+    "axios": "^0.25.0",
     "expo": "~44.0.0",
     "expo-app-loading": "~1.3.0",
-    "expo-font": "^10.0.4",
+    "expo-av": "^10.2.0",
+    "expo-font": "~10.0.4",
     "expo-linear-gradient": "~11.0.0",
     "expo-status-bar": "~1.2.0",
     "node-sass": "^7.0.1",
@@ -35,6 +37,7 @@
     "react-native-safe-area-context": "^3.3.2",
     "react-native-sass-transformer": "^2.0.0",
     "react-native-screens": "^3.10.2",
+    "react-native-snap-carousel": "^3.9.1",
     "react-native-web": "0.17.1"
   },
   "devDependencies": {
