--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
     ]
   },
   "dependencies": {
+    "@aws-amplify/ui-react": "^2.2.0",
     "@expo-google-fonts/montserrat": "^0.2.2",
     "@expo/vector-icons": "^12.0.5",
     "@react-navigation/drawer": "^6.1.8",
     "@react-navigation/native": "^6.0.6",
     "@react-navigation/stack": "^6.0.11",
+    "aws-amplify": "^4.3.13",
     "axios": "^0.25.0",
     "expo": "~44.0.0",
     "expo-app-loading": "~1.3.0",
