--- a/package.json
+++ b/package.json
@@ -15,21 +15,34 @@
     ]
   },
   "dependencies": {
-    "@aws-amplify/ui-react": "^2.2.0",
+    "@aws-amplify/ui-react": "^2.2.1",
     "@expo-google-fonts/montserrat": "^0.2.2",
     "@expo/vector-icons": "^12.0.5",
-    "@react-navigation/drawer": "^6.1.8",
-    "@react-navigation/native": "^6.0.6",
-    "@react-navigation/stack": "^6.0.11",
+    "@react-native-async-storage/async-storage": "^1.15.17",
+    "@react-native-community/netinfo": "^7.1.9",
+    "@react-native-picker/picker": "^2.2.1",
+    "@react-navigation/drawer": "^6.3.0",
+    "@react-navigation/native": "^6.0.8",
+    "@react-navigation/stack": "^6.1.1",
     "aws-amplify": "^4.3.13",
+    "aws-amplify-react-native": "^6.0.2",
+    "aws-cli": "0.0.2",
     "axios": "^0.25.0",
-    "expo": "~44.0.0",
+    "bcrypt": "^5.0.1",
+    "body-parser": "^1.19.1",
+    "cors": "^2.8.5",
+    "dotenv": "^15.0.0",
+    "expo": "^44.0.6",
     "expo-app-loading": "~1.3.0",
-    "expo-av": "^10.2.0",
-    "expo-font": "~10.0.4",
-    "expo-linear-gradient": "~11.0.0",
+    "expo-av": "^10.2.1",
+    "expo-font": "^10.0.5",
+    "expo-linear-gradient": "^11.0.2",
     "expo-status-bar": "~1.2.0",
+    "express": "^4.17.2",
+    "http": "0.0.1-security",
+    "mongoose": "^6.1.10",
     "node-sass": "^7.0.1",
+    "nodemailer": "^6.7.2",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
